<resources>
    <string name="app_name">Game of Fifteen</string>
    <string name="results_string">Results</string>
    <string name="start_game">Start Game</string>
    <string name="_00_02_33">00:02:33</string>
    <string name="_58">58</string>
    <string name="best_finished_time">Best Finished Time</string>
    <string name="best_step_count">Best Step Count</string>
    <string name="_00_01_34">00:01:34</string>
    <string name="last_finished_time">Last Finished Time</string>
    <string name="last_step_count">Last Step Count</string>
    <string name="steps_0">Steps: 0</string>
    <string name="time_00_00_00">Time: 00:00:00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="shuffle">Shuffle</string>
    <string name="stop">Stop</string>
    <string name="open_reccomendations">Open Reccomendations</string>
</resources>