<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@drawable/background">
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        
            <TextView
                android:id="@+id/text_view_steps"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/steps_0"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>
        
        <TextView
            android:text="@string/time_00_00_00"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/text_view_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/group"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            style="@style/ButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:tag="00"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button1"
            android:layout_alignParentTop="true"
            android:tag="01"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button2"
            android:layout_alignParentTop="true"
            android:tag="02"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button4"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button3"
            android:layout_alignParentTop="true"
            android:tag="03"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button5"
            style="@style/ButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_below="@id/button1"
            android:tag="10"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button1"
            android:layout_below="@id/button1"
            android:tag="11"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button7"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button2"
            android:layout_below="@id/button1"
            android:tag="12"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button3"
            android:layout_below="@id/button1"
            android:tag="13"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            style="@style/ButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_below="@id/button5"
            android:tag="20"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button10"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button1"
            android:layout_below="@id/button5"
            android:tag="21"
            android:text="@string/_10" />

        <Button
            android:id="@+id/button11"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button2"
            android:layout_below="@id/button5"
            android:tag="22"
            android:text="@string/_11" />

        <Button
            android:id="@+id/button12"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button3"
            android:layout_below="@id/button5"
            android:tag="23 "
            android:text="@string/_12" />

        <Button
            android:id="@+id/button13"
            style="@style/ButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_below="@id/button9"
            android:tag="30"
            android:text="@string/_13" />

        <Button
            android:id="@+id/button14"
            style="@style/ButtonStyle"
            android:layout_below="@id/button9"
            android:layout_toEndOf="@id/button1"
            android:tag="31"
            android:text="@string/_14" />

        <Button
            android:id="@+id/button15"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button2"
            android:layout_below="@id/button9"
            android:tag="32"
            android:text="@string/_15" />

        <Button
            android:id="@+id/button16"
            style="@style/ButtonStyle"
            android:layout_toEndOf="@id/button3"
            android:layout_below="@id/button9"
            android:tag="33"
            android:background="@color/colorFreeButton"
            android:text="" />








    </RelativeLayout>

    <LinearLayout
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <Button
            android:text="@string/shuffle"
            android:layout_weight="1"
            android:id="@+id/button_shuffle"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:text="@string/stop"
            android:id="@+id/button_stop"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</FrameLayout>