<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/results_string"
        android:paddingTop="30sp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:text="@string/last_step_count"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/last_finished_time"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_last_step"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_last_time"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_00_01_34"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/best_step_count"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:text="@string/best_finished_time"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"/>

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_best_step"
                    android:text="@string/_58"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/text_best_time"
                    android:text="@string/_00_02_33"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:layout_marginTop="20dp"
                android:text="@string/start_game"
                android:textSize="20sp"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/button_start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_marginTop="20dp"
                android:text="@string/open_reccomendations"
                android:textSize="20sp"
                android:layout_marginHorizontal="20dp"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

</FrameLayout>